[package]
name = "telegram-groups-bot"
version = "0.1.0"
authors = [
  "Danilo Bargen <mail@dbrgn.ch>"
]

[dependencies]
telegram-bot = "^0.5"
log = "^0.3"
env_logger = "^0.3"
conv = "^0.3"
threadpool = "^1.3"
r2d2 = "^0.7"
r2d2_redis = "^0.5"
redis = "^0.7"
url = "^1.2"
quick-error = "^1.1"
itertools = "^0.5"
